# 2024_summer_work

./: CMakeLists.txt  README.md
inc/: armor.hpp  kalman.hpp  mark.hpp  number_classifier.hpp
src/: kalman.cpp  main.cpp  mark.cpp  number_classifier.cpp  testEigen.cpp
几乎没写的客户端/: CMakeLists.txt
几乎没写的客户端/src/: client.cpp  server.cpp
